2011-06-07	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* shared/src/bsp-start-zero.S: Use BSP_DATA_CACHE_ENABLED instead of
	DATA_CACHE_ENABLE.

2011-05-17  Till Straumann <strauman@slac.stanford.edu>

	PR1797/bsps
	* shared/startup/sbrk.c: Cleanup; changed default
	BSP_sbrk_policy to yield all memory to the heap.
	App must specify a different policy if desired.

2011-05-13  Gedare Bloom <gedare@gwmail.gwu.edu>

	PR1797/bsps
	* shared/startup/sbrk.c : Renamed bsp_sbrk_init().
	
2011-05-07  Kate Feng <feng@bnl.gov>

	PR1797/bsps
	* shared/startup/bspgetworkarea.c: Removed _bsp_sbrk_init().
	* shared/startup/pretaskinghook.c: Removed rtems/malloc.h.

2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/console/polled_io.c, shared/flash/spansionFlash.c,
	shared/startup/bspidle.c, shared/startup/probeMemEnd.c:
	Use "__asm__" instead of "asm" for improved c99-compliance.

2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.68, automake-1.11.1.

2011-01-28	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* beatnik/include/bsp.h, beatnik/irq/irq.h, beatnik/pci/gt_pci_init.c,
	ep1a/console/polled_io.c, ep1a/irq/openpic_xxx_irq.c,
	gen5200/include/irq.h, gen5200/irq/irq.c, gen5200/startup/bspstart.c,
	haleakala/irq/irq.c, mbx8xx/irq/irq.c, mbx8xx/irq/irq.h,
	motorola_powerpc/include/bsp.h, mpc8260ads/irq/irq.c,
	mpc8260ads/irq/irq.h, mvme3100/include/bsp.h, mvme3100/irq/irq.h,
	mvme3100/start/start.S, mvme5500/include/bsp.h, mvme5500/irq/irq.h,
	psim/include/bsp.h, psim/include/coverhd.h, psim/irq/irq.h,
	psim/shmsupp/addrconv.c, psim/shmsupp/getcfg.c,
	psim/startup/linkcmds, psim/tools/psim-gdb-top.in,
	psim/tools/psim-top.in, psim/tools/runtest-top.in, qemuppc/irq/irq.h,
	score603e/irq/irq.c, shared/bootloader/bootldr.h,
	shared/bootloader/em86.c, shared/bootloader/em86real.S,
	shared/bootloader/exception.S, shared/bootloader/head.S,
	shared/bootloader/lib.c, shared/bootloader/misc.c,